k8s/argo/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-eventsource-eventsource-svc
  namespace: default
spec:
  selector:
    eventsource-name: webhook-eventsource
  ports:
    - protocol: TCP
      port: 12000
      targetPort: 12000
